--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1440px;
+    width: 100%;
     padding-left: 32px;
     padding-right: 32px;
 }
@@ -32,7 +32,7 @@ li{
     display: flex;
     justify-content: space-around;
     align-items: center;
-width: 1440px;
+width: 100%;
 height: 556px;
 /* padding: 64px 165px 64px 165px; */
 }
@@ -84,7 +84,7 @@ text-align: left;
     display: flex;
     justify-content: space-around;
     align-items: center;
-width:1440px;
+width:100%;
 height:244px;
 background-color:rgba(243, 243, 243, 1)
 }
@@ -110,7 +110,7 @@ text-align: left;
 }
 .headline{
     height: 620px;
-    width: 1440px;
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -186,9 +186,11 @@ text-align: left;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1440px;
+    
     height: 564px;
     background-image:url(../image/CTAImg-Desktop-1440px.jpg) ;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 .mini-users{
 display: flex;
@@ -230,7 +232,7 @@ color: white;
     display: flex;
     justify-content: space-around;
     vertical-align:top;
-    width: 1440px;
+    width: 100%;
     height: 336px;
    
     background-color: black;
